k8s/istio/mesh-injection-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-repo-creator
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
